# cli-tool-for-task-habit-tracking-with-rust

./: Cargo.toml  ReadMe.md
data/: current_session.json  habits.json  tasks.json
src/: main.rs
src/cli/: args.rs
src/domain/models/: habit.rs  mod.rs  pomodoro.rs  task.rs
src/domain/services/: habit_service.rs  mod.rs  pomodoro_service.rs  task_service.rs
src/habit/: model.rs  service.rs
src/storage/: json_store.rs  mod.rs
src/todo/: model.rs  service.rs
